<resources>
    <string name="app_name">keepSake</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newuser">New User? Sign Up here</string>
    <string name="signinbtn">Sign In</string>
    <string name="passwordhint">Enter your Password</string>
    <string name="emailhint">Enter your Email Id</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyuser">Already have an account? Sign in</string>
    <string name="passwordhints">Enter your Password</string>
    <string name="emailidhint">Enter your Email Id</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="useremail">User Email id</string>
    <string name="welcome">Welcome</string>
    <string name="ff_welcome"><![CDATA[Friends & Family who were present to welcome me]]></string>
    <string name="save">Save</string>
    <string name="babyheight">height</string>
    <string name="babyweight">weight</string>
    <string name="born_on">born on</string>
    <string name="babyname">name</string>
    <string name="introducing_me">Introducing me</string>
    <string name="upload">Upload</string>
    <string name="enter_email">Please enter Email Id</string>
    <string name="enter_password">Please enter Password</string>
    <string name="signin_failed">Sign in failed</string>
    <string name="my_famous_firsts">My famous firsts</string>
    <string name="my_first_bath">My first bath</string>
    <string name="my_first_smile">My first smile</string>
    <string name="my_first_word">My first word</string>
    <string name="my_first_teeth">My first teeth</string>
    <string name="my_first_outing_adventure">My first outing adventure</string>
    <string name="one_month_old">1 Month old</string>
    <string name="the_time_i_was_born">The time I was born</string>
    <string name="my_big_arrival">My big Arrival</string>
    <string name="the_city_i_was_born_in">The city I was born in</string>
    <string name="the_hospital_i_was_born_in">The hospital I was born in</string>
    <string name="watch_me_grow">Watch me grow</string>
    <string name="_1_month_weight_height">1 month weight height</string>
    <string name="_3_months_weight_height">3 months weight height</string>
    <string name="_6_months_weight_height">6 months weight height</string>
    <string name="_9_months_weight_height">9 months weight height</string>
    <string name="_12_months_weight_height">12 months weight height</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="the_world_around_me">The world around me</string>
    <string name="national_leader">National leader on the day I was born</string>
    <string name="headline_on_the_day_i_was_born">headline on the day I was born</string>
    <string name="cost_of_gallon_of_milk">Cost of gallon of milk on the day I was born</string>
    <string name="cost_of_package_of_diapers">Cost of package of diapers on the day I was born</string>
    <string name="welcome_to_keepsake">Welcome To keepSake</string>
    <string name="two_months_old">2 Months old</string>
    <string name="three_months_old">3 Months old</string>
    <string name="four_months_old">4 Months old</string>
    <string name="five_months_old">5 Months old</string>
    <string name="six_months_old">6 Months old</string>
    <string name="seven_months_old">7 Months old</string>
    <string name="eight_months_old">8 Months old</string>
    <string name="nine_months_old">9 Months old</string>
    <string name="ten_months_old">10 Months old</string>
    <string name="eleven_months_old">11 Months old</string>
    <string name="twelve_months_old">12 Months old</string>
    <string name="my_first_pic_ever">My first pic ever</string>
    <string name="my_monthly_pic">My monthly pic</string>
    <string name="savebtnToast">Memories saved</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_first_pic_with_family">My First Pic With Family</string>
    <string name="my_monthly_pic_menu">My Monthly Pic</string>
    <string name="my_famous_firsts_menu">My Famous First</string>
    <string name="watch_me_grow_menu">Watch Me Grow</string>
    <string name="the_world_areound_me_menu">The World around Me</string>
    <string name="my_big_arrival_menu">My Big Arrival</string>
    <string name="intrducing_me_menu">Introducing Me</string>
    <string name="keepsake">keepSake</string>
    <string name="keepsakeP">keepSake</string>
    <string name="picwithmomdad"><![CDATA[With Mom & dad]]></string>
    <string name="picwithsiblings">With siblings</string>
    <string name="picwithgrandparents">With Grandparents</string>
    <string name="picwithgrandparentss">With Grandparents</string>
    <string name="picwithunclenaunt"><![CDATA[With Uncle & Aunt]]></string>
    <string name="picwithunclenaunt2"><![CDATA[With Uncle & Aunt]]></string>
    <string name="picwithcousin">With cousin</string>
    <string name="picwithcousin2">With cousin</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="signin_successfull">SignIn Successful</string>
    <string name="OR">or</string>
    <string name="upload_succ">Upload Done</string>
    <string name="upload_fail">Upload Failed</string>
</resources>
