<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_intro"
            android:title="@string/intrducing_me_menu" />

        <item android:id="@+id/nav_arrival"
            android:title="@string/my_big_arrival_menu" />

        <item android:id="@+id/nav_theDay"
            android:title="@string/the_world_areound_me_menu"/>

        <item android:id="@+id/nav_grow"
            android:title="@string/watch_me_grow_menu"/>

        <item android:id="@+id/nav_myfirsts"
            android:title="@string/my_famous_firsts_menu"/>

        <item android:id="@+id/nav_monthlypic"
            android:title="@string/my_monthly_pic_menu"/>

        <item android:id="@+id/nav_familyPic"
            android:title="@string/my_first_pic_with_family"/>

    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_logout"
            android:title="@string/sign_out"/>
    </group>

</menu>