<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".SignIn">
    
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>
        
        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/emailhint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/passwordhint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
        
        <Button
            android:id="@+id/btnSignin"
            android:text="@string/signinbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/signuptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newuser"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>

    </LinearLayout>


</RelativeLayout>